Fix for image name overflow

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -31,6 +31,13 @@ button {
   margin-left:15px;
 }
 
+.card-footer-item {
+  white-space: nowrap;
+  overflow: hidden;
+  display: block;
+  text-overflow: ellipsis;
+}
+
 /*Loader*/
 .loader-wrapper {
   position: absolute;
